[css] Font size is too small in windows with medium sizes  issue-7569

--- a/assets/scss/home-page.sass
+++ b/assets/scss/home-page.sass
@@ -44,24 +44,25 @@
       font-family: $concord-font
       font-size: 2em
       min-height: 4em
+
       @media screen and (min-width: 320px)
-        font-size: 2.5em
-        min-height: 4em
+        font-size: 2.1em
+
       @include media-breakpoint-up(sm)
         font-size: 2.5em
-        min-height: 4em
+
       @include media-breakpoint-up(md)
         font-size: 2.5em
-        min-height: 4em
+
       @include media-breakpoint-up(lg)
         font-size: 3.5em
-        min-height: 4em
+
       @include media-breakpoint-up(xl)
         font-size: 4em
-        min-height: 4em
+
       @media screen and (min-width: 1400px)
         font-size: 5.5em
-        min-height: 4em
+      
 
       #typed
         br
@@ -216,7 +217,7 @@
           a
             text-decoration: none
             white-space: normal
-/* stylelint-enable no-descending-specificity */
+          /* stylelint-enable no-descending-specificity */
 
 .absolute-center
   position: absolute
